--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,102 @@
-* {
-  box-sizing: border-box;
-  font-family: sans-serif;
+@font-face {
+	font-family: 'Quicksand';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(./assets/quicksand.woff2) format("woff2");
+	unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB
 }
 
-html, body, #root {
-  padding: 0;
-  margin: 0;
-  height: 100%;
+@font-face {
+	font-family: 'Quicksand';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(./assets/quicksand.woff2) format("woff2");
+	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
+}
+
+@font-face {
+	font-family: 'Quicksand';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(./assets/quicksand.woff2) format("woff2");
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
+}
+
+* {
+	box-sizing: border-box;
+	font-family: "Quicksand", sans-serif;
+}
+
+html,
+body,
+#root {
+	padding: 0;
+	margin: 0;
+	height: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	margin: 0;
+}
+
+/* header */
+nav.navbar {
+	display: flex;
+	place-content: space-between;
+
+	padding: 1rem;
+	gap: 1rem;
+
+	background-color: #374a53;
+	color: white;
+}
+
+nav.navbar p,
+nav.navbar h1 {
+	display: flex;
+	align-items: center;
+}
+
+nav.navbar div p {
+	justify-content: end;
+}
+
+@media screen and (max-width: 767px) {
+	nav.navbar {
+		flex-direction: column;
+	}
+
+	nav.navbar div p {
+		justify-content: start;
+	}
+}
+
+/* main */
+section {
+	max-width: 1500px;
+	margin: 1rem auto;
+}
+
+.cat-container {
+	display: flex;
+	flex-flow: wrap;
+	justify-content: center;
+
+	gap: 1rem;
+
+	padding: 1rem;
+}
+
+/* cat image */
+.cat-image {
+	border-radius: 10px;
 }
