added score calculator in header

--- a/src/index.css
+++ b/src/index.css
@@ -148,6 +148,6 @@ figure .cat-description {
 	background-color: black;
 	color: white;
 
-	border: 2px white solid;
+	border: 2px cyan solid;
 	border-radius: 10px;
 }
