--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,17 @@ section {
 
 	overflow: hidden;
 	cursor: pointer;
+
+	animation-name: cssAnimation;
+	animation-duration: 1.5s;
+	opacity: 0;
+	animation-fill-mode: forwards;
+}
+
+@keyframes cssAnimation {
+	to {
+		opacity: 1;
+	}
 }
 
 .cat-image {
