--- a/src/index.css
+++ b/src/index.css
@@ -115,11 +115,14 @@ section {
 
 	overflow: hidden;
 	cursor: pointer;
+}
 
+.fade-in {
 	animation-name: cssAnimation;
-	animation-duration: 1.5s;
+	animation-duration: 1s;
 	opacity: 0;
 	animation-fill-mode: forwards;
+	animation-timing-function: ease-in;
 }
 
 @keyframes cssAnimation {
