--- a/src/index.css
+++ b/src/index.css
@@ -125,11 +125,11 @@ section {
 	animation-timing-function: ease-in;
 }
 
-@keyframes cssAnimation {
+/* @keyframes cssAnimation {
 	to {
 		opacity: 1;
 	}
-}
+} */
 
 .cat-image {
 	display: block;
@@ -137,7 +137,7 @@ section {
 }
 
 .cat-box:hover .cat-image {
-	opacity: 60%;
+	opacity: .7;
 }
 
 figure:hover .cat-description {
