--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ p {
 	justify-content: center;
 
 	padding: 1rem;
+	margin: 0;
 }
 
 h1 {
@@ -114,8 +115,7 @@ nav.incorrect {
 
 /* main content */
 main {
-	width: auto;
-	max-width: 1500px;
+	width: 100%;
 }
 
 section {
@@ -126,6 +126,8 @@ section {
 	display: flex;
 	flex-flow: wrap;
 	justify-content: center;
+
+	max-width: 1500px;
 
 	gap: 1rem;
 
