--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,10 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+a {
+	height: min-content;
+
 	margin: 0;
 	color: white;
 }
@@ -69,7 +72,8 @@ p {
 	background: #364156;
 
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 
 	padding: 1rem;
 	margin: 0;
@@ -225,13 +229,13 @@ section {
 	}
 }
 
-
-
 figure .cat-description {
 	display: none;
 }
 
-.click-text {
+.btn {
+	height: min-content;
+
 	padding: 0.5rem;
 
 	background-color: black;
