--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,8 @@ a {
 
 	margin: 0;
 	color: white;
+
+	text-decoration: none;
 }
 
 #root {
@@ -77,6 +79,7 @@ a {
 
 	padding: 1rem;
 	margin: 0;
+	gap: 10px
 }
 
 @media screen and (max-width: 767px) {
@@ -101,6 +104,8 @@ nav {
 
 	padding: 1rem;
 	gap: 1rem;
+
+	align-items: center;
 
 	background-color: #212d40;
 	color: white;
@@ -236,11 +241,16 @@ figure .cat-description {
 .btn {
 	height: min-content;
 
-	padding: 0.5rem;
-
 	background-color: black;
 	color: white;
 
+	padding: 0.5rem;
 	border: 2px cyan solid;
 	border-radius: 10px;
+
+	text-align: center;
+}
+
+.full-width {
+	width: 100%;
 }
