updated win condition logic to be more accurate

--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,26 @@ nav.incorrect {
 	background-color: #e2393a;
 }
 
+nav.win {
+	background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 154, 0, 1) 10%, rgba(208, 222, 33, 1) 20%, rgba(79, 220, 74, 1) 30%, rgba(63, 218, 216, 1) 40%, rgba(47, 201, 226, 1) 50%, rgba(28, 127, 238, 1) 60%, rgba(95, 21, 242, 1) 70%, rgba(186, 12, 248, 1) 80%, rgba(251, 7, 217, 1) 90%, rgba(255, 0, 0, 1) 100%);
+	background-size: 1000% 100%;
+	animation: rainbow 5s linear infinite;
+}
+
+@keyframes rainbow {
+	0% {
+		background-position: 0% 50%;
+	}
+
+	50% {
+		background-position: 100% 50%;
+	}
+
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 @media screen and (max-width: 767px) {
 	nav {
 		flex-direction: column;
